@@ -1,5 +1,5 @@
 # Makefile.am -- 
-# Copyright 2006-08 Red Hat Inc., Durham, North Carolina.
+# Copyright 2006-08,2011 Red Hat Inc., Durham, North Carolina.
 # All Rights Reserved.
 #
 # This library is free software; you can redistribute it and/or
@@ -43,11 +43,13 @@ message.c:
 	cp ${top_srcdir}/lib/message.c .
 
 BUILT_SOURCES = captabs.h clone-flagtabs.h epoll_ctls.h famtabs.h \
-	fcntl-cmdtabs.h flagtabs.h ipctabs.h open-flagtabs.h \
+	fcntl-cmdtabs.h flagtabs.h icmptypetabs.h ipctabs.h \
+	nfprototabs.h open-flagtabs.h \
 	seeks.h socktabs.h typetabs.h
 noinst_PROGRAMS = gen_captabs_h gen_clone-flagtabs_h gen_epoll_ctls_h \
 	gen_famtabs_h gen_fcntl-cmdtabs_h gen_flagtabs_h \
-	gen_ipctabs_h gen_open-flagtabs_h gen_seeks_h \
+	gen_icmptypetabs_h gen_ipctabs_h gen_nfprototabs_h \
+	gen_open-flagtabs_h gen_seeks_h \
 	gen_socktabs_h gen_typetabs_h
 
 gen_captabs_h_SOURCES = ../lib/gen_tables.c ../lib/gen_tables.h captab.h
@@ -83,10 +85,20 @@ gen_fcntl_cmdtabs_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="fcntl-cmdtab.h"'
 fcntl-cmdtabs.h: gen_fcntl-cmdtabs_h Makefile
 	./gen_fcntl-cmdtabs_h --i2s fcntl > $@
 
+gen_icmptypetabs_h_SOURCES = ../lib/gen_tables.c ../lib/gen_tables.h icmptypetab.h
+gen_icmptypetabs_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="icmptypetab.h"'
+icmptypetabs.h: gen_icmptypetabs_h Makefile
+	./gen_icmptypetabs_h --i2s icmptype > $@
+
 gen_ipctabs_h_SOURCES = ../lib/gen_tables.c ../lib/gen_tables.h ipctab.h
 gen_ipctabs_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="ipctab.h"'
 ipctabs.h: gen_ipctabs_h Makefile
 	./gen_ipctabs_h --i2s ipc > $@
+
+gen_nfprototabs_h_SOURCES = ../lib/gen_tables.c ../lib/gen_tables.h nfprototab.h
+gen_nfprototabs_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="nfprototab.h"'
+nfprototabs.h: gen_nfprototabs_h Makefile
+	./gen_nfprototabs_h --i2s nfproto > $@
 
 gen_open_flagtabs_h_SOURCES = ../lib/gen_tables.c ../lib/gen_tables.h \
 	open-flagtab.h
