@@ -17,6 +17,7 @@
 - Add ability for audispd syslog plugin to choose facility local0-7
 - Report server issues to remote client
 - Update ausearch parsing
+- Update auparse to handle virt events
 
 1.7.18
 - Update time examples in ausearch/report man pages
